[package]
name = "codex-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
bytes = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
chrono = { version = "0.4", features = ["clock"] }
